# dive-log-app

./: .env.example  .gitignore  HERO_IMAGE_SETUP.md  LOCATION_INTEGRATION.md  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
app/: divelog.py  globals.css  layout.tsx  main.py  page.tsx  search_club_website.py
app/api/search-club/: route.ts
app/demo-form/: page.tsx
app/services/: geolocation.py  search_club_website.py
assets/: README.md
components/forms/: DiveForm.tsx  index.ts
components/map/: BaseMap.tsx  LocationPicker.tsx  LocationSearchInput.tsx  index.ts
convex/: convex_readme.md  dives.ts  files.ts  schema.ts
convex/_generated/: api.d.ts
lib/: geocoding.ts  search.ts
lib/types/: location.ts
old files/: MAP_IMPLEMENTATION.md  PRIMEREACT_SETUP.md  old_endpoints.py
tests/: convex_storage_inspector.py  convex_test.py  test_dive_upsert.py  test_resolve_dive_metadata.py  test_upload_photo.py  test_upsert_with_photo.py
